--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -312,6 +312,7 @@
   "boilerplate.components.Header.search": "Search Ui",
   "boilerplate.components.Header.user.profile": "My Profile",
   "boilerplate.components.Header.user.task": "My Task",
+  "boilerplate.components.Header.noNotification": "No Notifications",
   "boilerplate.components.Header.user.email": "My Inbox",
   "boilerplate.components.Header.user.logout": "Log Out",
   "boilerplate.components.Header.user.login": "Log In",
@@ -901,6 +902,9 @@
   "boilerplate.containers.Payroll.Setting.penalty": "Penalty",
   "boilerplate.containers.Payroll.Setting.overTime": "Over Time",
   "boilerplate.containers.Payroll.Setting.reward": "Reward",
+  "boilerplate.containers.Payroll.Setting.abscence": "Abscence",
+  "boilerplate.containers.Payroll.Setting.late": "Late",
+  "boilerplate.containers.Payroll.Setting.delay": "Delay",
   "boilerplate.containers.Payroll.Setting.resign": "Resign",
   "boilerplate.containers.Payroll.Setting.organization": "Organization",
   "boilerplate.containers.Payroll.Setting.subject": "Subject",
