REFACTOR: Human Resources - Course  - re-build with payrollTable

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -957,6 +957,14 @@
   "boilerplate.containers.Payroll.HumanResources.quantity": "الكمية",
   "boilerplate.containers.Payroll.HumanResources.uniformPrice": "السعر",
   "boilerplate.containers.Payroll.HumanResources.id": "كود المستند",
+  "boilerplate.containers.Payroll.HumanResources.phone": "رقم الهاتف",
+  "boilerplate.containers.Payroll.HumanResources.topics": "المواضيع",
+  "boilerplate.containers.Payroll.HumanResources.attendanceNotes": "ملاحظات الحضور",
+  "boilerplate.containers.Payroll.HumanResources.seatNumber": "رقم المقعد",
+  "boilerplate.containers.Payroll.HumanResources.courseType": "نوع الكورس",
+  "boilerplate.containers.Payroll.HumanResources.courseDays": "عدد ايام الكورس",
+  "boilerplate.containers.Payroll.HumanResources.courseHours": "عدد ساعات الكورس",
+  "boilerplate.containers.Payroll.HumanResources.expirationPeriod": "فترة انتهاء الكورس",
   "boilerplate.containers.Payroll.HumanResources.executionId": "الكود",
   "boilerplate.containers.Payroll.HumanResources.transactionDate": "تاريخ العودة",
   "boilerplate.containers.Payroll.HumanResources.employeeId": "كود الموظف",
