--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -951,6 +951,14 @@
   
   "boilerplate.containers.Payroll.HumanResources.quantity": "Quantity",
   "boilerplate.containers.Payroll.HumanResources.uniformPrice": "Price",
+  "boilerplate.containers.Payroll.HumanResources.phone": "Phone",
+  "boilerplate.containers.Payroll.HumanResources.attendanceNotes": "Attendance Notes",
+  "boilerplate.containers.Payroll.HumanResources.seatNumber": "Seat Number",
+  "boilerplate.containers.Payroll.HumanResources.topics": "Topics",
+  "boilerplate.containers.Payroll.HumanResources.courseType": "Course Type",
+  "boilerplate.containers.Payroll.HumanResources.courseDays": "Course Days",
+  "boilerplate.containers.Payroll.HumanResources.courseHours": "Course Hours",
+  "boilerplate.containers.Payroll.HumanResources.expirationPeriod": "Expiration Period",
   "boilerplate.containers.Payroll.HumanResources.id": "Id",
   "boilerplate.containers.Payroll.HumanResources.returnDate": "Return Date",
   "boilerplate.containers.Payroll.HumanResources.resignationDate": "Resignation Date",
