--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2940,5 +2940,11 @@
 
   "boilerplate.containers.Payroll.KPI.uploadErrorMess": "This data has not been preserved due to incompleteness",
 
-  "boilerplate.containers.Payroll.Employee.ExpiryCardErrMes": "Card Expired"
+  "boilerplate.containers.Payroll.Employee.ExpiryCardErrMes": "Card Expired",
+
+  "boilerplate.containers.Payroll.survey.noChoicesFound": "No choices found",
+  "boilerplate.containers.Payroll.survey.addOrChangeChoice": "Add or change choice",
+  "boilerplate.containers.Payroll.survey.choicesInfo": "Choices information",
+  "boilerplate.containers.Payroll.survey.editChoice": "Edit choice",
+  "boilerplate.containers.Payroll.survey.addChoice": "Add choice"
 }
