FEATURE: HR - CourseListCreate -  add docs "dropzone"

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -746,6 +746,10 @@
   "boilerplate.containers.Payroll.step": "المرحلة",
   "boilerplate.containers.Payroll.status": "الحالة",
   "boilerplate.containers.Payroll.approvedEmp": "متخذ القرار",
+  "boilerplate.containers.Payroll.dragAndDropFilesOrClick": "اسحب وأفلت الملفات أو انقر",
+  "boilerplate.containers.Payroll.cantUploadMoreThan": "لا يمكن تحميل أكثر من",
+  "boilerplate.containers.Payroll.items": "عناصر",
+  "boilerplate.containers.Payroll.fileIsTooBig": "الملف كبير جدًا",
   "boilerplate.containers.Payroll.edit": "تعديل",
   "boilerplate.containers.Payroll.addNew": "اضافة",
   "boilerplate.containers.Payroll.vacationBalance": "رصيد الاجازة",
