--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -723,6 +723,10 @@
   "boilerplate.containers.Payroll.approvedEmp": "WF Decision Maker",
   "boilerplate.containers.Payroll.edit": "Edit",
   "boilerplate.containers.Payroll.leave": "Leave",
+  "boilerplate.containers.Payroll.dragAndDropFilesOrClick": "Drag and drop files or click",
+  "boilerplate.containers.Payroll.cantUploadMoreThan": "Can't upload more than",
+  "boilerplate.containers.Payroll.items": "items",
+  "boilerplate.containers.Payroll.fileIsTooBig": "File is too big",
   "boilerplate.containers.Payroll.mission": "Mission",
   "boilerplate.containers.Payroll.permission": "Permission",
   "boilerplate.containers.Payroll.addNew": "Add",
