--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -749,6 +749,7 @@
   "boilerplate.containers.Payroll.dragAndDropFilesOrClick": "اسحب وأفلت الملفات أو انقر",
   "boilerplate.containers.Payroll.cantUploadMoreThan": "لا يمكن تحميل أكثر من",
   "boilerplate.containers.Payroll.items": "عناصر",
+  "boilerplate.containers.Payroll.chooseCourse": "اختر كورس",
   "boilerplate.containers.Payroll.fileIsTooBig": "الملف كبير جدًا",
   "boilerplate.containers.Payroll.edit": "تعديل",
   "boilerplate.containers.Payroll.addNew": "اضافة",
@@ -3000,5 +3001,9 @@
   "boilerplate.containers.Payroll.survey.surveyType": "نوع الاستبيان",
   "boilerplate.containers.Payroll.survey.questionType": "نوع السؤال",
   "boilerplate.containers.Payroll.survey.choiceGroup": "مجموعة الاختيارات",
-  "boilerplate.containers.Payroll.survey.questionGroup": "مجموعة الأسئلة"
+  "boilerplate.containers.Payroll.survey.questionGroup": "مجموعة الأسئلة",
+
+  "boilerplate.containers.Payroll.training.coursesNumber": "عدد الدورات",
+  "boilerplate.containers.Payroll.training.coursesIsRequired": "الدورات مطلوبة",
+  "boilerplate.containers.Payroll.training.employeesNumber": "عدد الموظفين"
 }
