--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -799,6 +799,9 @@
   "boilerplate.containers.Payroll.viewColumns": "View Columns",
   "boilerplate.containers.Payroll.filterTable": "Filter Table",
   "boilerplate.containers.Payroll.all": "All",
+  "boilerplate.containers.Payroll.pending": "Pending",
+  "boilerplate.containers.Payroll.approved": "Approved",
+  "boilerplate.containers.Payroll.rejected": "Rejected",
   "boilerplate.containers.Payroll.filters": "Filters",
   "boilerplate.containers.Payroll.showColumns": "Show Columns",
   "boilerplate.containers.Payroll.showHideTableColumns": "Show/Hide Table Columns",
@@ -2979,6 +2982,8 @@
 
   "boilerplate.containers.Payroll.training.coursesNumber": "Courses Number",
   "boilerplate.containers.Payroll.training.coursesIsRequired": "Courses Is Required",
+  "boilerplate.containers.Payroll.training.function": "Function",
+  "boilerplate.containers.Payroll.training.requestDate": "Request Date",
   "boilerplate.containers.Payroll.training.functions": "Functions",
   "boilerplate.containers.Payroll.training.getEmployees": "Get Employee",
   "boilerplate.containers.Payroll.training.employeesNumber": "Employees Number"
