--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -3014,5 +3014,12 @@
   "boilerplate.containers.Payroll.training.noFunctions": "لا يوجد وظائف",
   "boilerplate.containers.Payroll.training.noEmployees": "لا يوجد موظفين",
   "boilerplate.containers.Payroll.training.requestDate": "تاريخ الطلب",
-  "boilerplate.containers.Payroll.training.employeesNumber": "عدد الموظفين"
+  "boilerplate.containers.Payroll.training.employeesNumber": "عدد الموظفين",
+  "boilerplate.containers.Payroll.training.employeeInfo": "معلومات الموظف",
+  "boilerplate.containers.Payroll.training.pleaseSelectEmployeeFirst": "يرجى اختيار الموظف أولاً",
+  "boilerplate.containers.Payroll.training.pleaseSelectFunctionFirst": "يرجى اختيار الوظيفة أولاً",
+  "boilerplate.containers.Payroll.training.youAlreadySelectedThisEmployee": "لقد اخترت هذا الموظف بالفعل",
+  "boilerplate.containers.Payroll.training.employeeIsNotQualifiedMakeRequest": "الموظف غير مؤهل لتقديم الطلب",
+  "boilerplate.containers.Payroll.training.pleaseSelectOrganizationFirst": "يرجى اختيار المنظمة أولاً",
+  "boilerplate.containers.Payroll.training.functionsRequestSentSuccessfully": "تم إرسال طلب الوظائف بنجاح"
 }
