FEATURE: Training - QualificationCheck - create "QualificationCheck" page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -613,7 +613,7 @@
   "boilerplate.components.tables.codes.bank": "البنك",
   "boilerplate.components.tables.codes.add": "اضافة جديد",
   "boilerplate.components.tables.codes.phone": "رقم الهاتف",
-  "boilerplate.components.tables.codes.course": "اسم الدورة",
+  "boilerplate.components.tables.codes.course": "اسم الكورس",
   "boilerplate.components.tables.codes.startdate": "تاريخ البدء",
   "boilerplate.components.tables.codes.enddate": "تاريخ الانتهاء",
   "boilerplate.components.tables.codes.araddress": "العنوان بالعربية",
@@ -2793,7 +2793,7 @@
   "boilerplate.containers.Payroll.cv.noExperience": "لا توجد خبرة",
   "boilerplate.containers.Payroll.cv.coursesInfo": "معلومات الدورات",
   "boilerplate.containers.Payroll.cv.addCourse": "إضافة دورة",
-  "boilerplate.containers.Payroll.cv.editCourse": "تعديل الدورة",
+  "boilerplate.containers.Payroll.cv.editCourse": "تعديل الكورس",
   "boilerplate.containers.Payroll.cv.noCourses": "لا توجد دورات",
   "boilerplate.containers.Payroll.cv.noJobs": "لا توجد وظائف",
   "boilerplate.containers.Payroll.cv.jobInfo": "معلومات الوظيفة",
@@ -2806,7 +2806,7 @@
   "boilerplate.containers.Payroll.cv.endDate": "تاريخ الانتهاء",
   "boilerplate.containers.Payroll.cv.save": "حفظ",
   "boilerplate.containers.Payroll.cv.backToJobVacation": "العودة إلى إعلانات الوظائف",
-  "boilerplate.containers.Payroll.cv.courseTitle": "عنوان الدورة",
+  "boilerplate.containers.Payroll.cv.courseTitle": "عنوان الكورس",
   "boilerplate.containers.Payroll.cv.editExperience": "تعديل الخبرة",
   "boilerplate.containers.Payroll.cv.department": "القسم",
   "boilerplate.containers.Payroll.cv.workPlace": "مكان العمل",
@@ -3019,7 +3019,12 @@
   "boilerplate.containers.Payroll.training.pleaseSelectEmployeeFirst": "يرجى اختيار الموظف أولاً",
   "boilerplate.containers.Payroll.training.pleaseSelectFunctionFirst": "يرجى اختيار الوظيفة أولاً",
   "boilerplate.containers.Payroll.training.youAlreadySelectedThisEmployee": "لقد اخترت هذا الموظف بالفعل",
-  "boilerplate.containers.Payroll.training.employeeIsNotQualifiedMakeRequest": "الموظف غير مؤهل لتقديم الطلب",
+  "boilerplate.containers.Payroll.training.employeeIsNotQualifiedMakeRequest": "الموظف غير مؤهل، هل تريد تقديم الطلب؟",
   "boilerplate.containers.Payroll.training.pleaseSelectOrganizationFirst": "يرجى اختيار المنظمة أولاً",
-  "boilerplate.containers.Payroll.training.functionsRequestSentSuccessfully": "تم إرسال طلب الوظائف بنجاح"
+  "boilerplate.containers.Payroll.training.functionsRequestSentSuccessfully": "تم إرسال طلب الوظائف بنجاح",
+  "boilerplate.containers.Payroll.training.courseName": "اسم الكورس",
+  "boilerplate.containers.Payroll.training.expirationDate": "تاريخ انتهاء الصلاحية",
+  "boilerplate.containers.Payroll.training.courseExpiration": "انتهاء الكورس",
+  "boilerplate.containers.Payroll.training.notQualified": "غير مؤهل",
+  "boilerplate.containers.Payroll.training.expirationDays": "عدد أيام الانتهاء"
 }
