--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2993,7 +2993,12 @@
   "boilerplate.containers.Payroll.training.pleaseSelectEmployeeFirst": "Please select employee first",
   "boilerplate.containers.Payroll.training.pleaseSelectFunctionFirst": "Please select function first",
   "boilerplate.containers.Payroll.training.youAlreadySelectedThisEmployee": "You already selected this employee",
-  "boilerplate.containers.Payroll.training.employeeIsNotQualifiedMakeRequest": "Employee is not qualified to make request",
+  "boilerplate.containers.Payroll.training.employeeIsNotQualifiedMakeRequest": "Employee is not qualified, did you want to make request ?",
   "boilerplate.containers.Payroll.training.pleaseSelectOrganizationFirst": "Please select organization first",
-  "boilerplate.containers.Payroll.training.functionsRequestSentSuccessfully": "Functions request sent successfully"
+  "boilerplate.containers.Payroll.training.functionsRequestSentSuccessfully": "Functions request sent successfully",
+  "boilerplate.containers.Payroll.training.courseName": "Course Name",
+  "boilerplate.containers.Payroll.training.expirationDate": "Expiration Date",
+  "boilerplate.containers.Payroll.training.courseExpiration": "Course Expiration",
+  "boilerplate.containers.Payroll.training.notQualified": "Not Qualified",
+  "boilerplate.containers.Payroll.training.expirationDays": "Expiration Days"
 }
