FEATURE: Training - TrTrainingTrxList - create "TrTrainingTrxList" page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -3025,6 +3025,8 @@
   "boilerplate.containers.Payroll.training.courseName": "اسم الكورس",
   "boilerplate.containers.Payroll.training.expirationDate": "تاريخ انتهاء الصلاحية",
   "boilerplate.containers.Payroll.training.courseExpiration": "انتهاء الكورس",
+  "boilerplate.containers.Payroll.training.trainerName": "اسم المدرب",
+  "boilerplate.containers.Payroll.training.location": "الموقع",
   "boilerplate.containers.Payroll.training.notQualified": "غير مؤهل",
   "boilerplate.containers.Payroll.training.expirationDays": "عدد أيام الانتهاء"
 }
