--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2999,6 +2999,9 @@
   "boilerplate.containers.Payroll.training.courseName": "Course Name",
   "boilerplate.containers.Payroll.training.trainerName": "Trainer Name",
   "boilerplate.containers.Payroll.training.location": "Location",
+  "boilerplate.containers.Payroll.training.trainingDate": "Training Date",
+  "boilerplate.containers.Payroll.training.trainingName": "Training Name",
+  "boilerplate.containers.Payroll.training.trainingId": "Training Id",
   "boilerplate.containers.Payroll.training.expirationDate": "Expiration Date",
   "boilerplate.containers.Payroll.training.courseExpiration": "Course Expiration",
   "boilerplate.containers.Payroll.training.notQualified": "Not Qualified",
