FEATURE: Training - EmployeeAttendance - create "EmployeeAttendance" pages

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -3027,6 +3027,10 @@
   "boilerplate.containers.Payroll.training.courseExpiration": "انتهاء الكورس",
   "boilerplate.containers.Payroll.training.trainerName": "اسم المدرب",
   "boilerplate.containers.Payroll.training.location": "الموقع",
+  "boilerplate.containers.Payroll.training.getAttendance": "عرض الحضور",
+  "boilerplate.containers.Payroll.training.attendanceDate": "تاريخ الحضور",
+  "boilerplate.containers.Payroll.training.noAttendanceFound": "لم يتم العثور على الحضور",
+  "boilerplate.containers.Payroll.training.isAttend": "هل تم الحضور",
   "boilerplate.containers.Payroll.training.trainingDate": "تاريخ التدريب",
   "boilerplate.containers.Payroll.training.trainingName": "اسم التدريب",
   "boilerplate.containers.Payroll.training.trainingId": "كود التدريب",
