--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2999,6 +2999,10 @@
   "boilerplate.containers.Payroll.training.courseName": "Course Name",
   "boilerplate.containers.Payroll.training.trainerName": "Trainer Name",
   "boilerplate.containers.Payroll.training.location": "Location",
+  "boilerplate.containers.Payroll.training.getAttendance": "Get Attendance",
+  "boilerplate.containers.Payroll.training.attendanceDate": "Attendance Date",
+  "boilerplate.containers.Payroll.training.noAttendanceFound": "No Attendance Found",
+  "boilerplate.containers.Payroll.training.isAttend": "Is Attend",
   "boilerplate.containers.Payroll.training.trainingDate": "Training Date",
   "boilerplate.containers.Payroll.training.trainingName": "Training Name",
   "boilerplate.containers.Payroll.training.trainingId": "Training Id",
