Add Training Request

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -3006,6 +3006,18 @@
   "boilerplate.containers.Payroll.survey.choiceGroup": "مجموعة الاختيارات",
   "boilerplate.containers.Payroll.survey.questionGroup": "مجموعة الأسئلة",
 
+  "boilerplate.containers.Payroll.training.executionId": "الكود",
+  "boilerplate.containers.Payroll.training.id": "الكود",
+  "boilerplate.containers.Payroll.training.date": "التاريخ",
+  "boilerplate.containers.Payroll.training.functionName": "المهام",
+  "boilerplate.containers.Payroll.training.employeeName": "الموظف",
+  "boilerplate.containers.Payroll.training.employeeId": "الكود",
+  "boilerplate.containers.Payroll.training.courseId": "الكود",
+  "boilerplate.containers.Payroll.training.notes": "الملاحظات",
+  "boilerplate.containers.Payroll.training.organizationName": "الادارة",
+  "boilerplate.containers.Payroll.training.status": "الحالة",
+  "boilerplate.containers.Payroll.training.step": "المرحلة",
+  "boilerplate.containers.Payroll.training.approvedEmp": "صاحب القرار",
   "boilerplate.containers.Payroll.training.coursesNumber": "عدد الدورات",
   "boilerplate.containers.Payroll.training.coursesIsRequired": "الدورات مطلوبة",
   "boilerplate.containers.Payroll.training.functions": "الوظائف",
