--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2980,6 +2980,19 @@
   "boilerplate.containers.Payroll.survey.choiceGroup": "Choice group",
   "boilerplate.containers.Payroll.survey.questionGroup": "Question group",
 
+  
+  "boilerplate.containers.Payroll.training.executionId": "executionId",
+  "boilerplate.containers.Payroll.training.id": "Id",
+  "boilerplate.containers.Payroll.training.date": "Date",
+  "boilerplate.containers.Payroll.training.functionName": "Function",
+  "boilerplate.containers.Payroll.training.employeeName": "Employee",
+  "boilerplate.containers.Payroll.training.employeeId": "Id",
+  "boilerplate.containers.Payroll.training.courseId": "Id",
+  "boilerplate.containers.Payroll.training.notes": "Notes",
+  "boilerplate.containers.Payroll.training.organizationName": "Organization",
+  "boilerplate.containers.Payroll.training.status": "Status",
+  "boilerplate.containers.Payroll.training.step": "Step",
+  "boilerplate.containers.Payroll.training.approvedEmp": "approvedEmp",
   "boilerplate.containers.Payroll.training.coursesNumber": "Courses Number",
   "boilerplate.containers.Payroll.training.coursesIsRequired": "Courses Is Required",
   "boilerplate.containers.Payroll.training.function": "Function",
