--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -658,7 +658,8 @@
   "boilerplate.containers.Payroll.downloadExcel": "Download Excel",
   "boilerplate.containers.Payroll.minDate": "Min Date",
   "boilerplate.containers.Payroll.maxDate": "Max Date",
-  "boilerplate.containers.Payroll.code": "Code",
+  "boilerplate.containers.Payroll.code": "Code",  
+  "boilerplate.containers.Payroll.addTraining": "Add Training",  
   "boilerplate.containers.Payroll.delete": "Delete",
   "boilerplate.containers.Payroll.name": "Name",
   "boilerplate.containers.Payroll.more": "More",
@@ -2981,6 +2982,7 @@
   "boilerplate.containers.Payroll.survey.questionGroup": "Question group",
 
   
+  "boilerplate.containers.Payroll.training.addEmptoTraining": "Add Employee to Training",
   "boilerplate.containers.Payroll.training.executionId": "executionId",
   "boilerplate.containers.Payroll.training.id": "Id",
   "boilerplate.containers.Payroll.training.date": "Date",
@@ -3019,6 +3021,15 @@
   "boilerplate.containers.Payroll.training.trainingDate": "Training Date",
   "boilerplate.containers.Payroll.training.trainingName": "Training Name",
   "boilerplate.containers.Payroll.training.trainingId": "Training Id",
+  "boilerplate.containers.Payroll.training.isAssigned": "Is Assigned",
+  "boilerplate.containers.Payroll.training.surveyDone": "Is Survey",
+  "boilerplate.containers.Payroll.training.testIsReview": "Is Test Reviewed",
+  "boilerplate.containers.Payroll.training.testGrade": "test Grade",
+  "boilerplate.containers.Payroll.training.evaluate": "Evaluate",
+  "boilerplate.containers.Payroll.training.test": "Test",
+  "boilerplate.containers.Payroll.training.reviewTest": "Review Test",
+  "boilerplate.containers.Payroll.training.repeatTest": "Repeat Test",
+  "boilerplate.containers.Payroll.training.createTest": "Create Test",
   "boilerplate.containers.Payroll.training.expirationDate": "Expiration Date",
   "boilerplate.containers.Payroll.training.courseExpiration": "Course Expiration",
   "boilerplate.containers.Payroll.training.notQualified": "Not Qualified",
