--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2979,6 +2979,16 @@
   "boilerplate.containers.Payroll.survey.question": "Question",
   "boilerplate.containers.Payroll.survey.choiceGroup": "Choice group",
   "boilerplate.containers.Payroll.survey.questionGroup": "Question group",
+  "boilerplate.containers.Payroll.survey.finish": "Finish",
+  "boilerplate.containers.Payroll.survey.start": "Start",
+  "boilerplate.containers.Payroll.survey.thankYouForCompleteTheSurvey": "Thank you for completing the survey",
+  "boilerplate.containers.Payroll.survey.completedQuestions": "Completed questions",
+  "boilerplate.containers.Payroll.survey.thereAreQuestionsThatYouDidNotAnswerWhichAre": "There are questions that you did not answer which are",
+  "boilerplate.containers.Payroll.survey.backToSurvey": "Back to survey",
+  "boilerplate.containers.Payroll.survey.submit": "Submit",
+  "boilerplate.containers.Payroll.survey.previous": "Previous",
+  "boilerplate.containers.Payroll.survey.answer": "Answer",
+  "boilerplate.containers.Payroll.survey.next": "Next",
 
   
   "boilerplate.containers.Payroll.training.executionId": "executionId",
